# ndots-webhook

./: .drone.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.sh  entrypoint.sh  run.sh
deploy/: deployment.yaml  kustomization.yaml  mutating_webhook.yaml  ns.yaml  psp.yaml  sa.yaml  service.yaml  webhook-create-signed-cert.sh
src/: main.rs  models.rs
src/tests/: admission-review.json  mod.rs  test_serde.rs  testpod-1-ndots-preexisting-4-ndots.yaml  testpod-1-ndots.yaml  testpod-no-ndots.yaml
