[package]
name = "ndots-webhook"
version = "0.1.0"
authors = ["Peter Grace <pete.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde_json = "1.0.59"

[dependencies.serde]
version = "1.0.117"
features = ["derive"]