[package]
name = "ndots-webhook"
version = "0.1.0"
authors = ["Peter Grace <pete.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
strum_macros = "0.20.1"

[dependencies.rocket]
version = "0.4.6"
features = ["tls"]

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.strum]
version = "0.20.0"
features = ["derive"]
